correct align

--- a/static/custom.css
+++ b/static/custom.css
@@ -26,5 +26,4 @@ body, button, input, select, textarea {
 	text-align: right;
 	margin: .25em auto 0;
 	padding: 0;
-    padding-right: 3.2em;
 }
